[workspace]
resolver = "2"
members = ["crates/*"]

[profile.release]
lto = "fat"

[profile.release-lite]
inherits = "release"
lto = "thin"

[profile.release-debug]
inherits = "release"
lto = "thin"
debug = 1

[workspace.dependencies]
# Local
wcn_cluster = { path = "crates/cluster", default-features = false }
wcn_cluster_api = { path = "crates/cluster_api", default-features = false }
wcn_logging = { path = "crates/logging", default-features = false }
wcn_rocks = { path = "crates/rocks", default-features = false }
wcn_rpc = { path = "crates/rpc", default-features = false }
wcn_storage_api = { path = "crates/storage_api", default-features = false }
wcn_migration = { path = "crates/migration", default-features = false }
wcn_replication = { path = "crates/replication", default-features = false }
wcn_client = { path = "crates/client", default-features = false }
wcn_db = { path = "crates/db", default-features = false }

# Org
wc = { git = "https://github.com/WalletConnect/utils-rs.git", tag = "v0.14.1", default-features = false }

# Derives
derive_more = { version = "2.0", default-features = false, features = ["std"] }
derivative = { version = "2.0", default-features = false }
derive-where = { version = "1.5", default-features = false }
thiserror = { version = "2", default-features = false }
strum = { version = "0.27", default-features = false }

# General purpose
arc-swap = { version = "1.7", default-features = false }
anyhow = { version = "1.0", default-features = false, features = ["std"] }
backoff = { version = "0.4", default-features = false, features = ["tokio"] }
tap = { version = "1.0", default-features = false }
time = { version = "0.3", default-features = false }
bytes = { version = "1.0", default-features = false }
pin-project = { version = "1.0", default-features = false }
itertools = { version = "0.14", default-features = false, features = ["use_std"] }
rand = { version = "0.9", default-features = false, features = ["thread_rng"] }

# Collections
indexmap = { version = "2", default-features = false, features = ["std"] }
smallvec = { version = "1.11", default-features = false }

# Encoding
base64 = { version = "0.22", default-features = false, features = ["std"] }
const-hex = { version = "1.14", default-features = false, features = ["alloc"] }

# Serialization
serde = { version = "1.0", default-features = false }
serde_json = { version = "1.0", default-features = false, features = ["std"] }
postcard = { version = "1.0", default-features = false, features = ["use-std"] }

# Async
futures = { version = "0.3", default-features = false }
futures-concurrency = { version = "7.6", default-features = false }
tokio = { version = "1.0", default-features = false }
tokio-stream = { version = "0.1", default-features = false }
tokio-util = { version = "0.7", default-features = false }
tokio-serde = { version = "0.9", default-features = false }

# O11y
tracing = { version = "0.1", default-features = false }
tracing-subscriber = { version = "0.3", default-features = false }
metrics = { version = "0.24", default-features = false }
metrics-exporter-prometheus = { version = "0.17", default-features = false }
sysinfo = { version = "0.37", default-features = false }

# Other
alloy = { version = "1.0",  default-features = false }
libp2p-identity = { version = "0.2", default-features = false, features = ["peerid", "ed25519"] }
xxhash-rust = { version = "0.8", default-features = false, features = ["xxh3", "const_xxh3"] }
axum = { version = "0.8", default-features = false, features = ["tokio", "http1"] }
envy = { version = "0.4", default-features = false }
vergen-pretty = { version = "1.0", default-features = false, features = ["trace"] }
vergen = { version = "9", default-features = false, features = ["build", "cargo", "rustc", "si"] }

[workspace.lints.clippy]
all = { level = "deny", priority = -1 }
style = { level = "warn", priority = -1 }
absolute_paths = "warn"
bool_to_int_with_if = "warn"
clear_with_drain = "warn"
cloned_instead_of_copied = "warn"
collection_is_never_read = "warn"
empty_structs_with_brackets = "warn"
explicit_into_iter_loop = "warn"
filter_map_next = "warn"
implicit_clone = "warn"
implied_bounds_in_impls = "warn"
inconsistent_struct_constructor = "warn"
inefficient_to_string = "warn"
into_iter_without_iter = "warn"
iter_not_returning_iterator = "warn"
iter_with_drain = "warn"
manual_assert = "warn"
manual_instant_elapsed = "warn"
manual_string_new = "warn"
match_bool = "warn"
mem_forget = "warn"
mismatching_type_param_order = "warn"
needless_continue = "warn"
needless_for_each = "warn"
needless_pass_by_ref_mut = "warn"
readonly_write_lock = "warn"
redundant_clone = "warn"
redundant_type_annotations = "warn"
rest_pat_in_fully_bound_structs = "warn"
same_functions_in_if_condition = "warn"
struct_excessive_bools = "warn"
trait_duplication_in_bounds = "warn"
type_repetition_in_bounds = "warn"
unnecessary_box_returns = "warn"
unnecessary_self_imports = "warn"
unused_peekable = "warn"
useless_let_if_seq = "warn"
