[package]
name = "wcn_admin_api"
version = "0.1.0"
edition = "2021"
publish = false

[lints]
workspace = true

[features]
client = ["wcn_rpc/client"]
server = ["wcn_rpc/server"]

[dependencies]
wcn_rpc = { workspace = true }
serde = "1"
postcard = { version = "1.0", default-features = false, features = [
    "alloc",
    "use-std",
] }
snap = "1.1"
thiserror = "1"
tracing = "0.1"
futures = "0.3"
