[package]
name = "wcn_client"
version = "0.1.0"
edition = "2024"
publish = false

[dependencies]
wc = { workspace = true, features = ["metrics"] }
wcn_cluster_api = { path = "../cluster_api", features = ["rpc_client"] }
wcn_storage_api2 = { path = "../storage_api2", features = ["rpc_client"] }
wcn_cluster = { path = "../cluster" }
wcn_rpc = { workspace = true }
arc-swap = "1.7"
derive_more = { workspace = true, features = ["from", "try_into"] }
futures = "0.3"
rand = "0.9"
tap = "1.0"
thiserror = "1"
tokio = { version = "1", default-features = false, features = ["sync"] }
tracing = "0.1"

[lints]
workspace = true
