[package]
name = "wcn_client"
version = "0.1.0"
edition = "2024"
publish = false

[dependencies]
# Local
wcn_cluster = { workspace = true }
wcn_cluster_api = { workspace = true, features = ["rpc_client"] }
wcn_rpc = { workspace = true, features = ["client"] }
wcn_storage_api = { workspace = true, features = ["rpc_client"] }

# Org
wc = { workspace = true, features = ["metrics"] }

# Dervies
derive_more = { workspace = true }
thiserror = { workspace = true }

# General purpose
arc-swap = { workspace = true }
tap = { workspace = true }
rand = { workspace = true }

# Async 
futures = { workspace = true }
tokio = { workspace = true, features = ["sync"] }

# O11y
tracing = { workspace = true }

# Other
libp2p-identity = { workspace = true }

[lints]
workspace = true
