[package]
name = "wcn_client_api"
version = "0.1.0"
edition = "2021"
publish = false

[lints]
workspace = true

[features]
client = ["wcn_rpc/client"]
server = ["wcn_rpc/server"]

[dependencies]
wcn_rpc = { workspace = true }
wc = { workspace = true, features = ["metrics"] }
auth = { workspace = true }
domain = { workspace = true }
pulse_monitor = { workspace = true }

serde = "1"
serde_json = "1"
thiserror = "1"
tracing = "0.1"
futures = "0.3"
futures-util = "0.3"
tokio = { version = "1", features = ["sync"] }
tokio-stream = "0.1"
arc-swap = "1.7"
rand = "0.8"
