[package]
name = "wcn_cluster_api"
version = "0.1.0"
edition = "2024"
publish = false

[lints]
workspace = true

[features]
default = []
rpc_client = ["wcn_rpc/client"]
rpc_server = ["wcn_rpc/server"]

[dependencies]
wcn_cluster = { path = "../cluster" }
wc = { workspace = true, features = ["future", "metrics"] }
derive_more = { workspace = true, features = ["from", "try_into"] }
derive-where = { workspace = true }
tap = { workspace = true }
wcn_rpc = { workspace = true }
serde = "1"
thiserror = "1"
tracing = "0.1"
futures = "0.3"

[dev-dependencies]
wcn_cluster_api = { path = ".", features = ["rpc_client", "rpc_server"] }
logging = { package = "wcn_logging", path = "../logging" }
alloy = { version = "1.0", default-features = false, features = [
    "provider-anvil-node",
    "node-bindings",
] }
tokio = { version = "1", default-features = false }
