[package]
name = "wcn_cluster_api"
version = "0.1.0"
edition = "2024"
publish = false

[lints]
workspace = true

[features]
default = []
rpc_client = ["wcn_rpc/client"]
rpc_server = ["wcn_rpc/server"]

[dependencies]
# Local
wcn_cluster = { workspace = true }
wcn_rpc = { workspace = true }

# Org
wc = { workspace = true, features = ["future", "metrics"] }

# Derives
derive_more = { workspace = true, features = ["from", "try_into"] }
derive-where = { workspace = true }
thiserror = { workspace = true }
strum = { workspace = true }

# General purpose
tap = { workspace = true }
tracing = "0.1"

# Serialization
serde = "1"

# Async 
futures = "0.3"
futures-concurrency = { workspace = true }

[dev-dependencies]
wcn_cluster = { workspace = true, features = ["testing"] }
wcn_cluster_api = { workspace = true, features = ["rpc_client", "rpc_server"] }
wcn_logging = { workspace = true }

tokio = { workspace = true, default-features = false }

libp2p-identity = { workspace = true, features = ["rand"] }
alloy = { version = "1.0", default-features = false, features = [
    "provider-anvil-node",
    "node-bindings",
] }
