[package]
name = "wcn_db"
version = "0.1.0"
edition = "2021"
publish = false

[lib]
path = "src/lib.rs"
name = "wcn_db"

[[bin]]
path = "src/main.rs"
name = "wcn_db"

[features]
default = ["testing"]
testing = ["storage_api/rpc_client", "wcn_rpc/client"]

[lints]
workspace = true

[dependencies]
wc = { workspace = true, features = ["alloc", "future", "metrics"] }
logging = { package = "wcn_logging", path = "../logging" }
metrics = { workspace = true }
xxhash-rust = { workspace = true }
time = { workspace = true }
wcn_rpc = { workspace = true, features = ["server"] }
wcn_rocks = { workspace = true }
storage_api = { package = "wcn_storage_api2", path = "../storage_api2", default-features = false, features = [
    "rpc_server",
] }
anyhow = "1"
atty = "0.2"
axum = "0.8"
base64 = "0.20"
derive_more = { workspace = true, features = [
    "as_ref",
    "display",
    "from",
    "try_into",
    "deref",
] }
derivative = "2"
envy = "0.4"
futures = "0.3"
tokio = { version = "1", default-features = false, features = ["fs", "signal"] }
tokio-util = { version = "0.7", features = ["compat"] }
tokio-stream = "0.1"
serde = "1"
thiserror = "1"
metrics-exporter-prometheus = "0.15"
proc-mounts = "0.3"
sysinfo = "0.29"
tracing = "0.1"
tap = "1.0"
vergen-pretty = { version = "0.3", features = ["trace"] }

[dev-dependencies]
const-hex = "1.14"
rand = "0.9"
rand_chacha = "0.9"

[build-dependencies]
vergen = { version = "8", default-features = false, features = [
    "build",
    "cargo",
    "git",
    "gitoxide",
    "rustc",
] }
