[package]
name = "wcn_db"
version = "0.1.0"
edition = "2021"
publish = false

[lib]
path = "src/lib.rs"
name = "wcn_db"

[[bin]]
path = "src/main.rs"
name = "wcn_db"

[features]
default = ["testing"]
testing = ["wcn_storage_api2/rpc_client", "wcn_rpc/client"]

[lints]
workspace = true

[dependencies]
# Local
wcn_logging = { workspace = true }
wcn_rpc = { workspace = true, features = ["server"] }
wcn_rocks = { workspace = true }
wcn_storage_api2 = { workspace = true, features = ["rpc_server"] }

# Org
wc = { workspace = true, features = ["alloc", "future", "metrics"] }

# Derives
thiserror = { workspace = true}

# General purpose
anyhow = { workspace = true }
tap = { workspace = true }
time = { workspace = true }

# Encoding
base64 = { workspace = true }

# Serialization
serde = { workspace = true }

# Async
futures = { workspace = true }
futures-concurrency = { workspace = true }
tokio = { version = "1", default-features = false, features = ["signal"] }

# O11y
tracing = { workspace = true }
metrics = { workspace = true }
metrics-exporter-prometheus = { workspace = true }
sysinfo = { workspace = true, features = ["system", "network", "disk"] }
proc-mounts = { version = "0.3", default-features = false }

# Other
libp2p-identity = { workspace = true }
xxhash-rust = { workspace = true }
axum = { workspace = true }
envy = { workspace = true }
vergen-pretty = { workspace = true }

[dev-dependencies]
const-hex = { workspace = true }
rand = { workspace = true }

libp2p-identity = { workspace = true, features = ["rand"] }

[build-dependencies]
vergen = { workspace = true }
