[package]
name = "irn"
version = "0.1.0"
edition = "2021"
publish = false

[[bin]]
name = "irn"
path = "src/main.rs"

[dependencies]
irn_rpc = { path = "../rpc" }
irn_api = { path = "../irn_api" }
irn_auth = { path = "../auth" }
irn_admin_api = { path = "../admin_api", features = ["client"] }
irn_core = { path = "../core" }

derive_more = { workspace = true, features = ["deref"] }

clap = { version = "4", features = ["derive"] }
eyre = "0.6"
tracing = "0.1"
node = { package = "irn_node", path = "../../." }
vergen-pretty = { version = "0.3", features = ["trace"] }
anyhow = "1"
thiserror = "1.0"
tokio = "1.37"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1"
config = { version = "0.14", default-features = false, features = ["toml"] }
tap = "1.0"
metrics-exporter-prometheus = "0.15"

# Key generation.
ed25519-dalek = "2.1"
rand_chacha = "0.3"
data-encoding = "2.6"

# Storage
humantime = "2.1"
chrono = { version = "0.4", default-features = false, features = ["alloc"] }

# Node startup
pidlock = "0.1"
nix = { version = "0.28", default-features = false, features = ["signal"] }
fork = "0.1"


# Smart Contract Integration
alloy = { git = "https://github.com/alloy-rs/alloy", features = [
    "contract",
    "providers",
    "provider-http",
    "signer-mnemonic",
] }

[lints]
workspace = true
