[package]
name = "irn_api"
version = "0.1.0"
edition = "2021"
publish = false

[lints]
workspace = true

[features]
client = []
server = []

[dependencies]
network = { workspace = true }
wc = { workspace = true, features = ["metrics", "future"] }

async-stream = "0.3"
serde = "1"
postcard = { version = "1.0", default-features = false, features = [
    "alloc",
    "use-std",
] }
thiserror = "1"
futures-util = "0.3"
tap = "1.0"
tracing = "0.1"
tokio = { version = "1", features = ["sync"] }
futures = "0.3"
derive_more = { workspace = true, features = ["as_ref", "into"] }
tryhard = "0.5"
rand = "0.8"
ring = "0.17"
serde-big-array = "0.5"
xxhash-rust = { version = "0.8", features = ["xxh3"] }
ed25519-dalek = "2.1"

[dev-dependencies]
static_assertions = "1.1"
