[package]
name = "wcn_migration"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
derive-where = { workspace = true }
derive_more = { workspace = true }
anyhow = { workspace = true }
wc = { workspace = true, features = ["metrics"] }
wcn_rpc = { workspace = true }
storage_api = { package = "wcn_storage_api2", path = "../storage_api2", features = ["rpc_client"] }
cluster = { package = "wcn_cluster", path = "../cluster" }
futures-concurrency = { workspace = true }
backoff = { workspace = true }

futures = "0.3"
tap = "1.0"
tokio = { version = "1", default-features = false }
tracing = "0.1"

[dev-dependencies]
tokio = { version = "1", default-features = false }
storage_api = { package = "wcn_storage_api2", path = "../storage_api2", features = ["testing"] }
cluster = { package = "wcn_cluster", path = "../cluster", features = ["testing"] }
xxhash-rust = { workspace = true }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[lints]
workspace = true
