[package]
name = "wcn_migration"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
# Local
wcn_cluster = { workspace = true }
wcn_storage_api2 = { workspace = true }

# Derives
derive_more = { workspace = true }
derive-where = { workspace = true }

# General purpose
anyhow = { workspace = true }
backoff = { workspace = true }
tap = { workspace = true }

# Async
futures = { workspace = true }
futures-concurrency = { workspace = true }
tokio = { workspace = true }

# O11y
tracing = { workspace = true }

[dev-dependencies]
wcn_storage_api2 = { workspace = true, features = ["testing"] }
wcn_cluster = { workspace = true, features = ["testing"] }

tokio = { workspace = true }

tracing-subscriber = { workspace = true, features = ["std", "fmt", "env-filter"] }

libp2p-identity = { workspace = true }
xxhash-rust = { workspace = true }

[lints]
workspace = true
