[package]
name = "wcn_migration_api"
version = "0.1.0"
edition = "2021"
publish = false

[lints]
workspace = true

[features]
client = ["wcn_rpc/client"]
server = ["wcn_rpc/server"]

[dependencies]
wc = { workspace = true, features = ["future"] }

wcn_rpc = { workspace = true }
serde = "1"
thiserror = "1"
tracing = "0.1"
futures = "0.3"
time = "0.3"

# TODO: remove this dependency
relay_rocks = { path = "../rocks" }
